--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:strokeWidth="0dp"
-    app:cardCornerRadius="30dp">
+    app:cardCornerRadius="30dp"
+    app:strokeWidth="0dp">
 
     <ImageView
         android:id="@+id/gif"
