--- a/app/src/main/res/menu/menu_top.xml
+++ b/app/src/main/res/menu/menu_top.xml
@@ -2,6 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/menu_favorites"
         android:icon="@drawable/ic_like"
         android:title="@string/favorites"
         app:showAsAction="always" />
