--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -107,13 +107,25 @@
                     app:layout_constraintTop_toTopOf="@id/post_ic_like"
                     tools:text="10" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_share"
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/post_ic_share"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:elevation="0dp"
+                    android:foreground="?android:selectableItemBackground"
+                    app:cardBackgroundColor="@android:color/transparent"
+                    app:cardCornerRadius="14dp"
+                    app:cardElevation="0dp"
                     app:layout_constraintBottom_toBottomOf="@+id/post_ic_like"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/post_ic_like" />
+                    app:layout_constraintTop_toTopOf="@+id/post_ic_like">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_share" />
+                </androidx.cardview.widget.CardView>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
 
