--- a/app/src/main/res/drawable/shortcut_top_foreground.xml
+++ b/app/src/main/res/drawable/shortcut_top_foreground.xml
@@ -1,15 +1,16 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
+    android:tint="#0077FF"
     android:viewportWidth="108"
-    android:viewportHeight="108"
-    android:tint="#0077FF">
-  <group android:scaleX="1.9575"
-      android:scaleY="1.9575"
-      android:translateX="30.51"
-      android:translateY="30.51">
-    <path
-        android:fillColor="@android:color/white"
-        android:pathData="M16,6l2.29,2.29 -4.88,4.88 -4,-4L2,16.59 3.41,18l6,-6 4,4 6.3,-6.29L22,12V6z"/>
-  </group>
+    android:viewportHeight="108">
+    <group
+        android:scaleX="1.9575"
+        android:scaleY="1.9575"
+        android:translateX="30.51"
+        android:translateY="30.51">
+        <path
+            android:fillColor="@android:color/white"
+            android:pathData="M16,6l2.29,2.29 -4.88,4.88 -4,-4L2,16.59 3.41,18l6,-6 4,4 6.3,-6.29L22,12V6z" />
+    </group>
 </vector>
