--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -15,7 +15,7 @@
             android:id="@+id/line"
             android:layout_width="60dp"
             android:layout_height="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/defaultPadding"
             app:cardBackgroundColor="?attr/colorAccent"
             app:cardCornerRadius="4dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -25,16 +25,15 @@
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/card_gif"
+            style="@style/Card.Elevated"
             android:layout_width="0dp"
             android:layout_height="300dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            app:cardCornerRadius="30dp"
+            android:layout_marginStart="@dimen/defaultPadding"
+            android:layout_marginTop="@dimen/defaultPadding"
+            android:layout_marginEnd="@dimen/defaultPadding"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/line"
-            app:strokeWidth="0dp">
+            app:layout_constraintTop_toBottomOf="@id/line">
 
             <ImageView
                 android:id="@+id/post_gif"
@@ -46,21 +45,20 @@
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/card_description"
+            style="@style/Card"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            app:cardCornerRadius="30dp"
+            android:layout_marginStart="@dimen/defaultPadding"
+            android:layout_marginTop="@dimen/defaultPadding"
+            android:layout_marginEnd="@dimen/defaultPadding"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card_gif"
-            app:strokeWidth="0dp">
+            app:layout_constraintTop_toBottomOf="@id/card_gif">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="16dp">
+                android:padding="@dimen/defaultPadding">
 
                 <TextView
                     android:id="@+id/post_author"
@@ -92,22 +90,21 @@
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/card_like"
+            style="@style/Card"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="@dimen/defaultPadding"
+            android:layout_marginTop="@dimen/defaultPadding"
             android:layout_marginEnd="8dp"
-            app:cardCornerRadius="30dp"
             app:layout_constraintEnd_toStartOf="@id/card_share"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card_description"
-            app:strokeWidth="0dp">
+            app:layout_constraintTop_toBottomOf="@id/card_description">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="16dp">
+                android:padding="@dimen/defaultPadding">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -119,29 +116,28 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="@dimen/defaultPadding"
                     tools:text="1337" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/card_share"
+            style="@style/Card.Selectable"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="@dimen/defaultPadding"
+            android:layout_marginEnd="@dimen/defaultPadding"
             android:foreground="?android:selectableItemBackground"
-            app:cardCornerRadius="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/card_like"
-            app:layout_constraintTop_toBottomOf="@id/card_description"
-            app:strokeWidth="0dp">
+            app:layout_constraintTop_toBottomOf="@id/card_description">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="16dp">
+                android:padding="@dimen/defaultPadding">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -152,7 +148,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="@dimen/defaultPadding"
                     android:text="@string/share" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
@@ -161,9 +157,9 @@
             android:id="@+id/post_shimmer"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="@dimen/defaultPadding"
+            android:layout_marginTop="@dimen/defaultPadding"
+            android:layout_marginEnd="@dimen/defaultPadding"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/card_like"
@@ -190,9 +186,9 @@
             android:layout_marginTop="16dp"
             android:clipToPadding="false"
             android:minHeight="300dp"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:paddingBottom="16dp"
+            android:paddingStart="@dimen/defaultPadding"
+            android:paddingEnd="@dimen/defaultPadding"
+            android:paddingBottom="@dimen/defaultPadding"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/card_like"
