--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -2,11 +2,10 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Card.Elevated"
     android:layout_width="match_parent"
     android:layout_height="300dp"
-    android:layout_marginBottom="16dp"
-    app:cardCornerRadius="30dp"
-    app:strokeWidth="0dp">
+    android:layout_marginBottom="@dimen/defaultPadding">
 
     <ImageView
         android:id="@+id/gif"
@@ -21,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="@drawable/gradation_black"
-        android:padding="16dp"
+        android:padding="@dimen/defaultPadding"
         android:textColor="@color/white"
         tools:text="asdasd" />
 
