--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,18 @@
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
+
+    <style name="Card" parent="Widget.MaterialComponents.CardView">
+        <item name="cardElevation">0dp</item>
+        <item name="strokeWidth">0dp</item>
+        <item name="cardCornerRadius">@dimen/cardCornerRaduis</item>
+    </style>
+
+    <style name="Card.Elevated">
+        <item name="cardElevation">3dp</item>
+    </style>
+
+    <style name="Card.Selectable">
+        <item name="android:foreground">?android:selectableItemBackground</item>
+    </style>
 </resources>
